--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap-icons": "^1.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-dropdown": "^1.9.2",
     "react-scripts": "4.0.1",
     "react-tabs": "^3.1.2",
     "web-vitals": "^0.2.4"
@@ -20,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy":"npm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
