--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
+    "axios": "^0.21.1",
     "bootstrap": "^4.0.0",
     "bootstrap-icons": "^1.3.0",
     "react": "^17.0.1",
+    "react-accessible-accordion": "^3.3.4",
     "react-dom": "^17.0.1",
     "react-dropdown": "^1.9.2",
     "react-scripts": "4.0.1",
